add product CSV import workflow